[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/Components/TensionBar/TensionBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/BattleGUI.gd" type="Script" id=3]
[ext_resource path="res://GUI/MovesPanel.gd" type="Script" id=4]

[node name="BattleGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 0.783
anchor_bottom = 1.0
margin_left = 46.0
margin_top = -148.0
margin_right = -12.7921
margin_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TensionBar" parent="StatsPanel" instance=ExtResource( 1 )]
value = 10.0

[node name="MovesPanel" type="Panel" parent="."]
anchor_left = 0.785
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.16
margin_top = -148.0
margin_right = -27.0
margin_bottom = -14.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveLabels" type="VBoxContainer" parent="MovesPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 57.0
margin_top = 15.0
margin_right = -50.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicators" type="VBoxContainer" parent="MovesPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 12.0
margin_right = -128.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}
